# ivy-accounts-tools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  run_tests.sh  setup_account.py
.github/workflows/: lint_check.yml  pre-commit.yml  run_tests.yml
azure/: create.sh  main.bicep  storageAccount.bicep
docs/: README.md
infra_buckets/: README.md  infra_buckets.py
new_account/: README.md  new_account.py
new_sub_account/: README.md  new_sub_account.py
setup_sso/: README.md  setup_sso.py
tests/: README.md  test_saml.xml  test_setup_account.py
tests/localstack/initaws.d/: start_orgs.sh
thunder_github_automation/: thunder_github_automation.py
vpc_cleaner/: README.md  requirements.txt  vpc_cleaner.py
